# cpp-utils

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: ADL.md  SFINAE.md  diamond_problem.md  slicing_problem.md
src/: command_pattern.cpp  iterator_traits.cpp  observer_pattern.cpp  partial_specialization.cpp
